--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(https://c4.wallpaperflare.com/wallpaper/118/662/425/stars-calm-night-blue-wallpaper-preview.jpg) no-repeat center center fixed;
+    background: url("/Images/background.png") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
